[package]
name = "regui"
version = "0.1.0"
edition = "2021"
#plotters = "0.3.4"
#glazier = { git = "https://github.com/linebender/glazier", version = "0.7.0" }
#kurbo = "0.9.4"
#parley = { git = "https://github.com/dfrg/parley", version = "0.1.0" }
#pinot = "0.1.5"
#pollster = "0.3.0"
#pretty_env_logger = "0.4.0"
#tracing = "0.1.37"
#vello = { git = "https://github.com/linebender/vello", version = "0.0.1" }
#wgpu = "0.16.0"
#druid-shell = "0.8.0"
#piet-common = "0.6.2"
#gl = "0.14.0"
#glutin = "0.30.4"
#glutin-winit = "0.3.0"
#raw-window-handle = "0.5.0"
#winit = "0.28.1"
#skia-safe = { version = "0.58.0", features = ["gl"] }

[workspace]
members = [
    #"kits/nwg",
    #"kits/relm"
    #"kits/qt-widgets",
    #"kits/repaint",
    "kits/iui",
]
default-members = [
    #"kits/nwg",
    #"kits/relm"
    #"kits/qt-widgets",
    #"kits/repaint",
    "kits/iui",
]

[dependencies]


#[profile.release]
#strip = true
#opt-level = "z"
#lto = true
#codegen-units = 1
#panic = "abort"