[package]
name = "regui-nwg"
version = "0.1.0"
edition = "2021"

[dependencies]
regui = { version = "0.1.0", path = "../.." }
native-windows-gui = { version = "1.0.13", features = ["extern-canvas", "raw-win-handle"] }

[dev-dependencies]
#pollster = "0.3.0"
#raw-window-handle = "0.5.2"
wgpu = "0.16.1"
#windows-sys = { version = "0.48.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
#winapi = "0.3.9"
#native-windows-derive = "1.0.5"