[package]
name = "regui-repaint"
version = "0.1.0"
edition = "2021"

[dependencies]
enum-iterator = "1.4.1"
glutin = "0.30.9"
glutin-winit = "0.3.0"
gl = "0.14.0"
#glutin = "0.30.9"
#glutin-winit = "0.3.0"
hsl = "0.1.1"
raw-window-handle = "0.5.2"
#raw-window-handle = "0.5.2"
regui = { version = "0.1.0", path = "../.." }
repaint = { version = "0.1.0", path = "../../../repaint/repaint" }
repaint-with-skia-safe = { version = "0.1.0", path = "../../../repaint/implementations/skia-safe" }
skia-safe = { version = "0.63.0", features = ["gl"] }
#taffy = "0.3.12"
taffy = { git = "https://github.com/DioxusLabs/taffy" }
winit = "0.28.6"
#winit = "0.28.6"
